# open-vision-web-1

./: .gitignore  README.md
web-js/client/public/js/: web-cam.js
web-js/wasm/process-canvas/: Cargo.toml
web-js/wasm/process-canvas/src/: lib.rs
web-onnx-test/: run_wasm2wat.sh
web-onnx-test/client/public/js/: web-cam.js
web-onnx-test/server/: package.json
web-onnx-test/wasm/process-canvas/: Cargo.toml
web-onnx-test/wasm/process-canvas/.cargo/: config
web-onnx-test/wasm/process-canvas/src/: lib.rs
web-vue/: build.sh  index.html  vite.config.ts
web-vue/src/: App.vue
web-vue/src/js/: web-cam.js
web-vue/wasm/process-canvas/src/: lib.rs
web/wasm/process-canvas/src/: lib.rs
