[package]
name = "process-canvas"
version = "0.1.0"
authors = ["Jens Östlund <jostlund@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
# ort = "2.0.0-rc.0"
handpose_rs = { version="^0.1.0", path = "../../../../handpose-rs" }
image = "0.24.8"
serde = { version = "1.0.197", features = ["derive"] }
js-sys = "0.3.69"
tiny-skia = "0.11.4"
once_cell = "1.19.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'ImageData'
]

[profile.release]
lto = true
